close trade even after logging in